--- a/WORK3_Front/src/assets/css/main.css
+++ b/WORK3_Front/src/assets/css/main.css
@@ -68,3 +68,12 @@ body{ text-align:center; background-color:#fff; }
     float:left;
     border-width:1px; border-style: solid; border-color:#C7C7C7;
 } */
+
+b {
+    color: #eeeeee;
+    font-family: "Microsoft Yahei";
+    font-weight: bold;
+    position: relative;
+    top: 5px;
+    left: 15px;
+  }
